kubernetes-deployment/App-routes/update-traefik-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
    - protocol: TCP
      name: admin
      port: 8080
    # --- NEW EXTERNAL PORT ---
    - protocol: TCP
      name: cap-keeper-api
      port: 8000
      targetPort: 8000
  selector:
    app: traefik
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: default
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - "--api.insecure=true"
            - "--providers.kubernetescrd"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
            # --- NEW INTERNAL LISTENER ---
            - "--entrypoints.cap-keeper-api.address=:8000"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
            # --- NEW CONTAINER PORT ---
            - name: cap-keeper-api
              containerPort: 8000
